# Kaleido

./: .dockerignore  .gitignore  .markdown.rb  ARTiS  BUILD_AND_RELEASE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  ISSUES  LICENSE  LICENSE.txt  Makefile  README-HISTORICAL.md  README.md  ROADMAP.md  TECHDEBT.md  app.py  kaleido-playground.py  man_t.py  mermaid-playground.py  pyproject.toml  rebuild.sh
.circleci/: config.yaml  config.yml
.github/: renovate.json
.github/workflows/: check_changelog.yml  check_tag.yml  compare_changelog.yml  pre-commit.yml  publish_testpypi.yml  ruff.yml  static.yml  test.yml  update_cdn.yml
baile/: __init__.py  _fig_tools.py  _utils.py  browser.py  custom_logging.py  fig_properties.py  kaleido.py  main.py  prepare.py  process_images.py  tab.py
repos/: CMakeLists.txt  build_headless  build_headless_shell  build_orca_next  checkout_revision  fetch_chromium
repos/kaleido/: README-CC.md  mathjax_config.cfg  version
repos/kaleido/cc/: kaleido.cc  kaleido.h  utils.h
repos/kaleido/cc-1.5/: kaleido.h
repos/kaleido/cc/scopes/: Base.h  BaseScope.h  Factory.h  Mermaid.h  Plotly.h
repos/kaleido/js/: package-lock.json  package.json
repos/kaleido/js/src/: index.js
repos/kaleido/js/src/mermaid/: constants.js  has-all-propperties.js  parse.js  render.js
repos/kaleido/js/src/plotly/: parse.js  render.js
repos/kaleido/js/src/utils/: has-properties-of-object.js  has-propperties-of-object.js
repos/kaleido/py/: setup.py
repos/kaleido/py/kaleido/: __init__.py
repos/kaleido/py/kaleido/scopes/: base.py  mermaid.py  plotly.py
repos/kaleido/py/tests/: __init__.py
repos/kaleido/py/tests/baselines/plotly/: mapbox.emf  mapbox.eps  mathjax.emf  mathjax.eps  simple.emf  simple.eps  topojson.emf  topojson.eps  webgl.emf  webgl.eps
repos/kaleido/py/tests/plotly/: fixtures.py  test_plotly.py
repos/kaleido/tests/py/baselines/plotly/: mathjax.eps  simple.eps  topojson.eps  webgl.eps
repos/kaleido/tests/py/plotly/: fixtures.py  test_plotly.py
repos/kaleido/tests/test_py/baselines/plotly/: mathjax.eps  webgl.eps
repos/kaleido/tests/test_py/baselines/plotly/failed/: topojson.eps
repos/kaleido/tests/test_py/test_plotly/: test_plotly.py
repos/linux_full_scripts/: Dockerfile  build_kaleido  build_kaleido_docker
repos/linux_scripts/: Dockerfile  README.md  args.gn  args_arm.gn  args_arm64.gn  build_kaleido  build_kaleido_docker  build_kaleido_win  build_orca_next  build_orca_next_win  bundle_artifacts  bundle_artifacts_docker  checkout_revision  checkout_revision_docker  fetch_chromium  fetch_chromium_docker  gclient  launch_script  minimal_launch_script  perform_kaleido_build
repos/mac_scripts/: README.md  args_arm64.gn  args_x64.gn  build_blink  build_kaleido  build_orca_next  fetch_chromium
repos/orca_next/: orca_next.cc
repos/orca_next/cc/: orca_next.cc  orca_next.h
repos/orca_next/cc/plugins/: BasePlugin.h  Factory.h  Plotly.h
repos/orca_next/js/: package-lock.json  package.json  utils.js
repos/orca_next/js/src/: index.js
repos/orca_next/js/src/component/plotly-graph/: constants.js  index.js  parse.js  render.js
repos/orca_next/js/src/plotly/: is-non-empty-string.js  parse.js  render.js
repos/orca_next/py/orca_next/: __init__.py
repos/patches/: README.md
repos/patches/108.0.5359.125/: README.md
repos/patches/88.0.4324.150/: README.md
repos/version/: build_pep440_version.py
repos/win_scripts/: README.md  args.gn  args_x64.gn  args_x86.gn  build_kaleido.ps1  build_target.py  fetch_chromium-2.ps1  fetch_chromium-3.ps1  fetch_chromium-4.ps1  fetch_chromium.bat  fetch_chromium.ps1  get_depot_tools.ps1  kaleido.cmd  prepare_build.ps1  sync_chromium.bat
src/js/: package-lock.json  package.json
src/py/: .pre-commit-config.yaml  CHANGELOG.txt  README.md  REFACTOR_INSTRUCTIONS.md  mkdocs.yml  pyproject.toml
src/py/docs/: examples.md
src/py/integration_tests/dates/: scatter_map_w_layers.py
src/py/integration_tests/dates/figs/: scatter_map_w_layers.pkl.zst
src/py/kaleido/: __init__.py  _fig_tools.py  _kaleido_tab.py  _mocker.py  _page_generator.py  _path_tools.py  _profiler.py  _sync_server.py  _utils.py  errors.py  kaleido.py
src/py/kaleido/_kaleido_tab/: __init__.py  _devtools_utils.py  _errors.py  _js_logger.py  _tab.py
src/py/kaleido/_utils/: __init__.py  fig_tools.py  path_tools.py
src/py/kaleido/mocker/: __init__.py  _args.py  _defaults.py  _utils.py
src/py/kaleido/scopes/: base.py  plotly.py
src/py/kaleido2/: __init__.py
src/py/kaleido2/scopes/: __init__.py  plotly.py
src/py/scripts/: update_cdn.py
src/py/site/: 404.html  index.html  sitemap.xml
src/py/site/api/kaleido/: index.html
src/py/site/api/kaleido.errors/: index.html
src/py/site/api/kaleido.kaleido/: index.html
src/py/site/css/: api.css
src/py/site/examples/: index.html
src/py/site/jsons/: kaleido.errors.json  kaleido.json
src/py/tests/: README.md  app.py  conftest.py  manual.py  test_calc_fig.py  test_calc_fig_one_off.py  test_fig_tools.py  test_init.py  test_kaleido.py  test_kaleido_tab.py  test_large_fig.py  test_page_generator.py  test_path_tools.py  test_public_api.py  test_readme.py  test_utils.py
src/py/tests/hang_scripts/: WHY.md  open.py  open_close.py
src/py/tests/win_hang_scripts/: open.py  open_close.py
tests/: app.py
toolchain/: DEV_README.md  README.md  build_pep440_version.py  gn_append.patch  make_bin
toolchain/extract_config/: README.md
toolchain/gn_fragments/: BUILD.gn  README.md  gn_append.patch  gn_args.gn.template
toolchain/gn_fragments/126.0.6478.126/: BUILD.gn  args.gn
toolchain/src/: 00-set_version.sh  01-fetch_tools.sh  02-init_tools.sh  03-ksync.sh  04-patch_chromium.sh  05-gen_preamble.sh  06-append_gn.sh  06-build_ninja.sh  07-write_kversion.sh  08-sync_cpp.sh  09-build_kaleido.sh  10-extract.sh  10-extract_subscript.py  11-build_js.sh  11-extract_etc.sh  12-build_js.sh  12-roll_wheel.sh  13-roll_wheel.sh  xx-all.sh  xx-kdocker.sh  xx-krefresh.sh  xx-make_bin.sh  xx-template.sh
toolchain/stages/: 00-set_version.sh  01-fetch_tools.sh  (+4 more)
win_toolchain/: README.md
(+40 files in other folders)
