[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {namespaces = false}

[project]
name = "baile"
description = "A faster, better, stronger version of Kaleido, with extra helper functions for choreographer."
readme = "README.md"
requires-python = ">=3.9"
version = "0.0.1a"
dependencies = [
 "choreographer >=0.99.1",
 ]

[tool.ruff.lint]
ignore = ["E701"]