# Copied windows compatible options from //build/args/headless.gn
# Embed resource.pak into binary to simplify deployment.
headless_use_embedded_resources = true

# Use embedded data instead external files for headless in order
# to simplify deployment.
v8_use_external_startup_data = false

enable_nacl = false
enable_remoting = false

# Debug / symbols
symbol_level=0
blink_symbol_level=0
is_debug=false
is_component_build=false

target_cpu = "x86"