### FOR KALEIDO ###
static_library("kaleido_lib") {
  sources = [
    "app/kaleido.cc",
    "app/kaleido.h",
  ]
  defines = []
  if (!is_component_build) {
    sources += [
      "lib/utility/headless_content_utility_client.cc",
      "lib/utility/headless_content_utility_client.h",
    ]
  }
  deps = [
    "//build:branding_buildflags",
    "//components/devtools/simple_devtools_protocol_client",
    "//components/embedder_support",
    "//components/policy/content",
    "//components/security_state/content",
    "//content",
    "//content/public/app",
    "//content/public/browser",
    "//content/public/child:child",
    "//content/public/common",
    "//content/public/utility",
    "//printing/buildflags",
  ]
  public_deps = [
    ":headless_non_renderer",
    "//base",
    "//third_party/inspector_protocol:crdtp",
  ]
  if (!is_component_build) {
    public_deps += [ ":headless_non_renderer" ]
  }
  if (!is_fuchsia) {
    deps += [ "//components/crash/content/browser" ]
  }
  if (enable_printing) {
    deps += [
      "//components/printing/browser",
      "//components/printing/browser/headless:headless",
      "//components/printing/renderer",
      "//components/services/print_compositor",
      "//components/services/print_compositor/public/mojom",
    ]
  }
  if (is_win) {
    defines = [ "HEADLESS_USE_CRASHPAD" ]
    deps += [
      "//components/crash/core/app:run_as_crashpad_handler",
      "//content:sandbox_helper_win",
      "//sandbox",
    ]
  }
  if (is_mac) {
    deps += [ "//components/os_crypt/sync" ]
  }
  if (is_win || (is_posix && !is_mac)) {
    deps += [ "//components/crash/core/app" ]
  }
  configs += [
    ":headless_defines_config",
    "//build/config/compiler:wexit_time_destructors",
  ]
}

executable("kaleido") {
  configs -= [ "//build/config/compiler:thinlto_optimize_default" ]
  configs += [ "//build/config/compiler:thinlto_optimize_max" ]
  sources = [ "app/app.cc" ]
  defines = []
#  deps = [ ":kaleido_lib" ]
  if (proprietary_codecs) {
    deps += [ ":generate_headless_shell_license_file" ]
  }
  if (!headless_use_embedded_resources) {
    data = [
      "$root_out_dir/headless_lib_data.pak",
      "$root_out_dir/headless_lib_strings.pak",
    ]
  }
  if (is_win) {
    deps += [
      "//build/win:default_exe_manifest",
      "//content/public/app",
    ]
    configs += [ "//build/config/win:delayloads" ]
  }
  if (is_mac) {
    deps += [ "//sandbox/mac:seatbelt" ]
  }
  configs += [
    ":headless_defines_config",
    "//build/config/compiler:wexit_time_destructors",
  ]
}
